# ChatYourNotes-v2

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  error_handlers.py  extensions.py  models.py
backend/app/api/: __init__.py  routes.py
backend/app/services/: __init__.py  chunker.py  document_store.py  embedding_service.py  file_handler.py  note_service.py  ocr_service.py  pipeline.py  pipeline_service.py  qa_service.py  summarizer.py  vector_store.py
backend/tests/: test_pipeline.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: DocumentList.jsx  NoteForm.jsx  NoteList.jsx  Notification.jsx  QAConsole.jsx  StatusBanner.jsx  UploadPanel.jsx
frontend/src/services/: documentApi.js  httpClient.js  noteApi.js  qaApi.js
